2007-05-26 Hal Rosenstock <halr@voltaire.com>

	* scripts/IBswcountlimits.pm: Fix node description parsing
	  for switches

	* scripts/iblinkinfo.pl: Add peer port link width and speed
	  validation

2007-05-25 Hal Rosenstock <halr@voltaire.com>

	* scripts/IBswcountlimits.pm: Add support for routers

	* scripts/iblinkinfo.pl: Display remote LID with peer port info

	* scripts/IBswcountlimits.pm: Add support for rem_lid in
	  get_link_ends subroutine 

	* src/ibportstate.c: Handle peer ports at 1x that
	  should be wider and 2.5 Gbps that should be faster

	* src/ibportstate.c: Add LinkSpeed/Width related components
	  to output

2007-05-24 Hal Rosenstock <halr@voltaire.com>

	* scripts/ibprintca.pl: Add support for routers

2007-05-23 Hal Rosenstock <halr@voltaire.com>

	* scripts/ibcheckerrors.in, scripts/ibchecknet.in,
	  scripts/ibcheckstate.in, scripts/ibcheckwidth.in,
	  scripts/ibclearcounters.in, scripts/ibclearerrors.in,
	  scripts/ibfindnodesusing.in, scripts/IBswcountlimits.pm:
	  Add support for routers

2007-05-09 Hal Rosenstock <halr@voltaire.com>

	* src/grouping.c: Eliminate conditional compilation
	  based on WORDSIZE

2007-05-08 Hal Rosenstock <halr@voltaire.com>

	* src/ibnetdiscover.c: Bumped build version

	* include/grouping.h, src/grouping.c: Added support
	  for ISR2012 and ISR2004

2007-04-27 Ira K. Weiny <weiny2@llnl.gov>

	* scripts/IBswcountlimits.pm, scripts/ibfindnodesusing.pl,
	  scripts/ibprintca.pl, scripts/ibprintswitch.pl,
	  scripts/ibqueryerrors.pl, scripts/ibswportwatch.pl:
	  Remove all uses of "/tmp" from perl diags

2007-04-14 Albert L. Chu <chu11@llnl.gov> 

	* src/saquery.c, man/saquery.8: Add switch map support
	  (for -O and -U options)

	* man/ibtracert.8: Improve man page formatting

2007-04-04 Hal Rosenstock <halr@voltaire.com>

	* src/saquery.c, man/saquery.8: Add support for isSMdisabled
	  into -s query

2007-04-02 Albert L. Chu <chu11@llnl.gov>

	* src/saquery.c, man/saquery.8: Add get name queries (-O and -U)
